--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <p id="goldMined">0 Gold Mined</p>
 <button onclick="mineGold() "> Mine Gold </button>
 <button onclick="buyGoldPerClick()" id="perClickUpgrade">Upgrade Pickaxe (Currently Level 1) Cost: 10 Gold</button>
-<button onclick="autoUpgrade()" id="autoUpgrade">Auto</button>
+<button onclick="autoUpgrade()" id="autoUpgrade">Auto Clicker Buy</button>
 
 <script src="main.js" charset="utf-8" type="text/javascript"></script>
   </body>
