--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Incremental</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
 <p id="goldMined">0 Gold Mined</p>
