--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <button onclick="mineGold() "> Mine Gold </button>
 <button onclick="buyGoldPerClick()" id="perClickUpgrade">Upgrade Pickaxe (Currently Level 1) Cost: 10 Gold</button>
 <button onclick="autoUpgrade()" id="autoUpgrade">Auto Clicker Buy</button>
-<button class = "button" onclick="resetGame()">Hard Reset</button>
-<button class = "button" onclick ="exportGame()">Export Save</button>
-<button class = "button" onclick = "importGame()">Import Save</button>
+<button onclick="resetGame()">Hard Reset</button>
+<button onclick ="exportGame()">Export Save</button>
+<button onclick = "importGame()">Import Save</button>
 
 <script src="main.js" charset="utf-8" type="text/javascript"></script>
   </body>
