--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <button onclick="buyGoldPerClick()" id="perClickUpgrade">Upgrade Pickaxe (Currently Level 1) Cost: 10 Gold</button>
 <button onclick="autoUpgrade()" id="autoUpgrade">Auto Clicker Buy</button>
 
+<iframe src="https://open.spotify.com/embed/playlist/6Ei677HTAxOiC8cEncyR3Z" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+
 <script src="main.js" charset="utf-8" type="text/javascript"></script>
   </body>
 </html>
