--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <button onclick="mineGold() "> Mine Gold </button>
 <button onclick="buyGoldPerClick()" id="perClickUpgrade">Upgrade Pickaxe (Currently Level 1) Cost: 10 Gold</button>
 <button onclick="autoUpgrade()" id="autoUpgrade">Auto Clicker Buy</button>
+<button onclick="hardReset()" id="hardReset"> Hard Reset</button>
 
 <iframe src="https://open.spotify.com/embed/playlist/6Ei677HTAxOiC8cEncyR3Z" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
