--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Incremental</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Gold Miner</title>
   </head>
   <body>
-<p id="goldMined">0 Gold Mined</p>
-<button onclick="mineGold() "> Mine Gold </button>
-<button onclick="buyGoldPerClick()" id="perClickUpgrade">Upgrade Pickaxe (Currently Level 1) Cost: 10 Gold</button>
-<button onclick="autoUpgrade()" id="autoUpgrade">Auto Clicker Buy</button>
-<button onclick="hardReset()" id="hardReset"> Hard Reset</button>
-
-<iframe src="https://open.spotify.com/embed/playlist/6Ei677HTAxOiC8cEncyR3Z" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-
-<script src="main.js" charset="utf-8" type="text/javascript"></script>
+    <p id="goldMined">0 Gold Mined</p>
+    <div id="navigateButtons">
+      <button onclick="tab('mineGoldMenu')">Go to Mine Gold</button>
+      <button onclick="tab('shopMenu')">Go to Shop</button>
+    </div>
+    <div id="mineGoldMenu">
+      <button onclick="mineGold()">Mine Gold</button>
+    </div>
+    <div id="shopMenu">
+      <button onclick="buyGoldPerClick()" id="perClickUpgrade">Upgrade Pickaxe (Currently Level 1) Cost: 10 Gold</button>
+    </div>
+    <script src="main.js" charset="utf-8" type="text/javascript"></script>
   </body>
 </html>
