--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Gold Miner</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <p id="goldMined">0 Gold Mined</p>
+    <p id="goldMined" class="gold-mined">0 Gold Mined</p>
     <div id="navigateButtons">
       <button onclick="tab('mineGoldMenu')">Go to Mine Gold</button>
       <button onclick="tab('shopMenu')">Go to Shop</button>
