--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="navigateButtons">
       <button onclick="tab('mineGoldMenu')">Go to Mine Gold</button>
       <button onclick="tab('shopMenu')">Go to Shop</button>
+      <button onclick="tab('optionMenu')">Options</button>
     </div>
     <div id="mineGoldMenu">
       <button onclick="mineGold()">Mine Gold</button>
