--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Gold Miner</title>
+    <title>Incremental</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
@@ -17,6 +17,9 @@
     </div>
     <div id="shopMenu">
       <button onclick="buyGoldPerClick()" id="perClickUpgrade">Upgrade Pickaxe (Currently Level 1) Cost: 10 Gold</button>
+    </div>
+    <div id="optionMenu">
+
     </div>
     <script src="main.js" charset="utf-8" type="text/javascript"></script>
   </body>
