--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>incremental</title>
+    <title>jazz</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
