--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <p id="goldMined" class="gold-mined">0 Gold Mined</p>
+    <p id="woodMined" class="wood-mined">0 Wood Mined</p>
     <div id="navigateButtons">
-      <button onclick="tab('mineGoldMenu')">Go to Mine Gold</button>
+      <button onclick="tab('mineWoodMenu')">Go to Mine Wood</button>
       <button onclick="tab('shopMenu')">Go to Shop</button>
       <button onclick="tab('optionMenu')">Options</button>
     </div>
-    <div id="mineGoldMenu">
-      <button onclick="mineGold()">Mine Gold</button>
+    <div id="mineWoodMenu">
+      <button onclick="mineWood()">Mine Wood</button>
     </div>
     <div id="shopMenu">
-      <button onclick="buyGoldPerClick()" id="perClickUpgrade">Upgrade Pickaxe (Currently Level 1) Cost: 10 Gold</button>
+      <button onclick="buyWoodPerClick()" id="perClickUpgrade">Upgrade Pickaxe (Currently Level 1) Cost: 10 Wood</button>
     </div>
     <div id="optionMenu">
 
