--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <p id="woodMined" class="wood-harvested">0 Wood Mined</p>
+    <p id="woodMined" class="resources">0 Wood Mined</p>
     <div id="navigateButtons">
       <button onclick="tab('mineWoodMenu')">Go to Mine Wood</button>
       <button onclick="tab('shopMenu')">Go to Shop</button>
