--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <p id="woodMined" class="resources">Wood: 0</p>
     <p id="cobbleMined" class="resources">Cobblestone: 0</p>
     <div id="navigateButtons">
-      <button onclick="tab('mineWoodMenu')">Go to Mine Wood</button>
+      <button onclick="tab('harvestMenu')">Harvest</button>
       <button onclick="tab('shopMenu')">Go to Shop</button>
       <button onclick="tab('optionMenu')">Options</button>
     </div>
-    <div id="mineWoodMenu">
+    <div id="harvestMenu">
       <button onclick="mineWood()">Mine Wood</button>
       <button onclick="mineCobble()">Mine Cobblestone</button>
     </div>
