--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <p id="woodMined" class="resources">Wood: 0</p>
-    <p id="cobbleMined" class="resources">Cobblestone: 0</p>
+    <p id="woodMined" class="resources">Wood</p>
+    <p id="cobbleMined" class="resources">Cobblestone</p>
     <div id="navigateButtons">
       <button onclick="tab('harvestMenu')">Harvest</button>
       <button onclick="tab('shopMenu')">Go to Shop</button>
